knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/Provider_Group_History__c.object-meta.xml
<CustomObject>
    <label>Provider Group History</label>
    <nameField>
        <displayFormat>PGN-{000000}</displayFormat>
        <label>Provider Group History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provider Group Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>