knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/fields/Current_or_Previous__c.field-meta.xml
<CustomField>
    <fullName>Current_or_Previous__c</fullName>
    <label>Current or Previous</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Group</fullName>
            </value>
            <value>
                <fullName>Previous Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>