knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/fields/Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Type__c</fullName>
    <label>Group Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>National</fullName>
            </value>
            <value>
                <fullName>Regional</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>