knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provider Group Histories</relationshipLabel>
    <relationshipName>Provider_Group_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>