knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incumbent</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Competitors</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provider Group Histories (Incumbent)</relationshipLabel>
    <relationshipName>Provider_Group_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>