knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/fields/Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction__c</fullName>
    <label>Satisfaction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0. Unknown</fullName>
            </value>
            <value>
                <fullName>1. Very dissatisfied</fullName>
            </value>
            <value>
                <fullName>2. Somewhat dissatisfied</fullName>
            </value>
            <value>
                <fullName>3. Neutral</fullName>
            </value>
            <value>
                <fullName>4. Somewhat satisfied</fullName>
            </value>
            <value>
                <fullName>5. Very satisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>