knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/recordTypes/ALF_Provider_Group.recordType-meta.xml
<RecordType>
    <fullName>ALF_Provider_Group</fullName>
    <active>true</active>
    <description>Used to input Provider Group History Records for Assisted Living Facilities</description>
    <label>ALF Provider Group</label>
</RecordType>