knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/recordTypes/EM_Provider_Group.recordType-meta.xml
<RecordType>
    <fullName>EM_Provider_Group</fullName>
    <active>true</active>
    <description>Used to input Provider Group History Records for EM Services</description>
    <label>EM Provider Group</label>
</RecordType>