knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/recordTypes/HM_Provider_Group.recordType-meta.xml
<RecordType>
    <fullName>HM_Provider_Group</fullName>
    <active>true</active>
    <description>Used to input Provider Group History Records for HM Services</description>
    <label>HM Provider Group</label>
</RecordType>