knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/recordTypes/ICP_Provider_Group.recordType-meta.xml
<RecordType>
    <fullName>ICP_Provider_Group</fullName>
    <active>true</active>
    <label>ICP Provider Group</label>
</RecordType>