knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/recordTypes/ICU_Provider_Group.recordType-meta.xml
<RecordType>
    <fullName>ICU_Provider_Group</fullName>
    <active>true</active>
    <label>ICU Provider Group</label>
</RecordType>