knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/recordTypes/SNF_Provider_Group.recordType-meta.xml
<RecordType>
    <fullName>SNF_Provider_Group</fullName>
    <active>true</active>
    <description>Used to input Provider Group History Records for Skilled Nursing Facilities</description>
    <label>SNF Provider Group</label>
</RecordType>