knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/recordTypes/TM_Provider_Group.recordType-meta.xml
<RecordType>
    <fullName>TM_Provider_Group</fullName>
    <active>false</active>
    <description>Used to input Provider Group History Records for TM Services</description>
    <label>TM Provider Group</label>
</RecordType>