knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/recordTypes/UC_Provider_Group.recordType-meta.xml
<RecordType>
    <fullName>UC_Provider_Group</fullName>
    <active>true</active>
    <description>Used to input Provider Group History Records for Urgent Care Facilities</description>
    <label>UC Provider Group</label>
</RecordType>