knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hospital__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Satisfaction__c</columns>
    <columns>Incumbent__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Current_or_Previous__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>