knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/listViews/Apollo_Accounts1.listView-meta.xml
<ListView>
    <fullName>Apollo_Accounts1</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Hospital__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Incumbent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Incumbent__c</field>
        <operation>equals</operation>
        <value>ApolloMD</value>
    </filters>
    <label>Apollo Accounts</label>
</ListView>