knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Provider_Group_History__c/listViews/ICU_Provider_Group_Histories.listView-meta.xml
<ListView>
    <fullName>ICU_Provider_Group_Histories</fullName>
    <columns>NAME</columns>
    <columns>Incumbent__c</columns>
    <columns>Hospital__c</columns>
    <columns>Current_or_Previous__c</columns>
    <columns>Group_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Provider_Group_History__c.ICU_Provider_Group</value>
    </filters>
    <label>ICU Provider Group Histories</label>
</ListView>